data/all_generated_tests/raw_wast_tests/if_InfiniteLoops_1543.wast
;; 4. **Test Description**: Include an `if` block with nested `br` instructions within a `loop`, where the `else` branch contains complex stack manipulations, potentially leading to improper laddering out of the loop.    **Constraint Checked**: Checks handling of complex branching and operand stack states across `else` branches.    **Relation to Infinite Loops**: Improper stack or branch handling can ensure the loop condition repeatedly passes, trapping the program in an infinite loop.

(assert_invalid
 (module
  (func $test
   (i32.const 1)
   (loop $label0
    (i32.const 0)
    (if (result i32)
     (then
      (i32.const 1)
      (br $label0)
     )
     (else
      (i32.const 1)
      (i32.const 2)
      (drop)
     )
    )
    (i32.const 1)
   )
  )
 )
 "type mismatch"
)